java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLineParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g 2011-03-16 18:45:05

package org.netbeans.modules.java.j2seproject.ui.customizer.vmo.gen;

import java.util.Set;
import java.util.HashSet;
import java.util.List;
import java.util.LinkedList;
import java.util.Arrays;
import java.util.regex.Pattern;
import org.netbeans.modules.java.j2seproject.ui.customizer.vmo.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class CommandLineParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "WS", "TEXT", "LETTER", "'-'", "'='", "'\\''", "'\"'"
    };
    public static final int EOF=-1;
    public static final int T__7=7;
    public static final int T__8=8;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int WS=4;
    public static final int TEXT=5;
    public static final int LETTER=6;

    // delegates
    // delegators


        public CommandLineParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CommandLineParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CommandLineParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g"; }



    	private static final String SERVER = "server";
    	private static final String CLIENT = "client";
    	private static final String ESA = "esa";
    	private static final String ESA_LONG = "enablesystemassertions";
    	private static final String DSA = "dsa";
    	private static final String DSA_LONG = "disablesystemassertions";
    	private static final String EA = "ea";
    	private static final String EA_LONG = "enableassertions";
    	private static final String DA = "da";
    	private static final String DA_LONG = "disableassertions";
    	private static final String VERBOSE = "verbose";
    	private static final String SVERSION = "showversion";
    	private static final String HELP = "?";
    	private static final String HELP_LONG = "help";
    	private static final String X = "X";
    	private static final String XINT = "Xint";
    	private static final String XBATCH = "Xbatch";
    	private static final String XCJNI = "Xcheck";
    	private static final String XFUTURE = "Xfuture";
    	private static final String XNOCLSGC = "Xnoclassgc";
    	private static final String XINCGC = "Xincgc";
    	private static final String XPROF = "Xprof";
    	private static final String XRS = "Xrs";
    	private static final String XSHARE = "Xshare";
    	private static final String JRE_SEARCH="jre-restrict-search";
    	private static final String JRE_NO_SEARCH="jre-no-restrict-search";
    	private static final String SPLASH = "splash";
    	private static final String XLOGGC = "Xloggc";
    	private static final String JAVAAGENT = "javaagent";
    	private static final String AGENTLIB = "agentlib";
    	private static final String AGENTPATH = "agentpath";
    	private static final String BOOTCP = "Xbootclasspath";
    	private static final String BOOTCPAPPEND = "Xbootclasspath/a";
    	private static final String BOOTCPPREPEND = "Xbootclasspath/p";
    	private static final String VERSION = "version";
    	private static final String CLASSPATH = "cp";
    	private static final String CLASSPATH_LONG = "classpath";

    	private static final Set<String> switchOptions = new HashSet<String>() {
    	    {
    	    	this.addAll(Arrays.asList(
    	    	SERVER,
    	    	CLIENT,
    	    	ESA,
    	    	ESA_LONG,
    	    	DSA,
    	    	DSA_LONG,
    	    	EA,
    	    	EA_LONG,
    	    	DA,
    	    	DA_LONG,
    	    	SVERSION,
    	    	HELP,
    	    	HELP_LONG,
    	    	X,
    	    	XINT,
    	    	XBATCH,
    	    	XFUTURE,
    	    	XNOCLSGC,
    	    	XINCGC,
    	    	XPROF,
    	    	XRS,
    	    	JRE_SEARCH,
    	    	JRE_NO_SEARCH));
    	    }
    	};
    	
    	private static final Set<String> paramOptions = new HashSet<String>(){
    	    {
    	        addAll(Arrays.asList(
    	        SPLASH,
    	        XLOGGC,
    	        JAVAAGENT,
    	        AGENTLIB,
    	        AGENTPATH,
    	        BOOTCP,
    	        BOOTCPAPPEND,
    	        BOOTCPPREPEND
    	        ));
    	    }
    	};
    	
    	private static final Pattern memOptions = Pattern.compile("X(m[sx]|ss)\\d+[gGmMkK]");
    	
    	private static boolean isParamOption(final String text) {
    		for (String option : paramOptions) {
    		    if (text.startsWith(option+':')) {
    		    	return true;
    		    }
    		}
    		return false;
    	}
    	
    	//xxx: Wrong! Should use TreeGrammer and not to populate customizer with custom nodes
    	//Should be rewritten but I have no time for this
    	public List<JavaVMOption<?>> parse() {
            Set<JavaVMOption<?>> result = new HashSet<JavaVMOption<?>>(); 
            try {
                vmOptions_return options_return = vmOptions();
                CommonTree root = options_return.tree;
                if (root instanceof JavaVMOption<?>) {
                    result.add((JavaVMOption<?>) root);
                } else if (root != null) {
                    result.addAll(root.getChildren());
                }                                       
            } catch (RecognitionException e) {
                e.printStackTrace();
            }
            result.addAll(getAllOptions());
            return new LinkedList<JavaVMOption<?>>(result); 
        }


        private static enum Kind {
            SWITCH, D, LOOSEPARAM, EQPARAM, COLUMNPARAM, FOLLOWED
        }


        private static class OptionDefinition {
            private OptionDefinition(String name, Kind kind) {
                this.kind = kind;
                this.name = name;
            }

            Kind kind;
            String name;
        }

        private static OptionDefinition[] optionsTemplates = {
                new OptionDefinition("client", Kind.SWITCH),
                new OptionDefinition("server", Kind.SWITCH),
                new OptionDefinition("ea", Kind.SWITCH),
                new OptionDefinition("da", Kind.SWITCH),
                new OptionDefinition("esa", Kind.SWITCH),
                new OptionDefinition("dsa", Kind.SWITCH),
                new OptionDefinition("verbose", Kind.SWITCH),
                new OptionDefinition("verbose:class", Kind.SWITCH),
                new OptionDefinition("verbose:jni", Kind.SWITCH),
                new OptionDefinition("verbose:gc", Kind.SWITCH),
                new OptionDefinition("version", Kind.SWITCH),
                new OptionDefinition("version", Kind.COLUMNPARAM),
                new OptionDefinition("showversion", Kind.SWITCH),
                new OptionDefinition("Xint", Kind.SWITCH),
                new OptionDefinition("Xbatch", Kind.SWITCH),
                new OptionDefinition("Xcheck:jni", Kind.SWITCH),
                new OptionDefinition("Xfuture", Kind.SWITCH),
                new OptionDefinition("Xnoclassgc", Kind.SWITCH),
                new OptionDefinition("Xincgc", Kind.SWITCH),
                new OptionDefinition("Xprof", Kind.SWITCH),
                new OptionDefinition("Xrs", Kind.SWITCH),
                new OptionDefinition("Xshare:off", Kind.SWITCH),
                new OptionDefinition("Xshare:on", Kind.SWITCH),
                new OptionDefinition("Xshare:auto", Kind.SWITCH),
                new OptionDefinition("jre-restrict-search", Kind.SWITCH),
                new OptionDefinition("jre-no-restrict-search", Kind.SWITCH),
                new OptionDefinition("Xmx", Kind.FOLLOWED),
                new OptionDefinition("Xms", Kind.FOLLOWED),
                new OptionDefinition("Xss", Kind.FOLLOWED),
                new OptionDefinition("splash", Kind.COLUMNPARAM),
                new OptionDefinition("javaagent", Kind.COLUMNPARAM),
                new OptionDefinition("agentlib", Kind.COLUMNPARAM),
                new OptionDefinition("agentpath", Kind.COLUMNPARAM),
        };

        public static List<JavaVMOption<?>> getAllOptions() {
            List<JavaVMOption<?>> result = new LinkedList<JavaVMOption<?>>();
            for (OptionDefinition optionsTemplate : optionsTemplates) {
                result.add(createOption(optionsTemplate));
            }
            return result;
        }

        private static JavaVMOption<?> createOption(OptionDefinition definition) {
            switch (definition.kind) {
                case SWITCH:
                    return new SwitchNode(definition.name);
                case D:
                    return new UserPropertyNode();
                case FOLLOWED:
                    return new ParametrizedNode(definition.name, "");
                case COLUMNPARAM:
                    return new ParametrizedNode(definition.name, ":");
                case EQPARAM:
                    return new ParametrizedNode(definition.name, "=");
                case LOOSEPARAM:
                    return new ParametrizedNode(definition.name, " ");
                default:
                    throw new IllegalArgumentException("Invalid definition.");
            }
        }


    public static class vmOptions_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "vmOptions"
    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:249:1: vmOptions : ( ( WS )? option )* ( WS )? -> ( option )* ;
    public final CommandLineParser.vmOptions_return vmOptions() throws RecognitionException {
        CommandLineParser.vmOptions_return retval = new CommandLineParser.vmOptions_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token WS1=null;
        Token WS3=null;
        CommandLineParser.option_return option2 = null;


        CommonTree WS1_tree=null;
        CommonTree WS3_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleSubtreeStream stream_option=new RewriteRuleSubtreeStream(adaptor,"rule option");
        try {
            // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:2: ( ( ( WS )? option )* ( WS )? -> ( option )* )
            // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:4: ( ( WS )? option )* ( WS )?
            {
            // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:4: ( ( WS )? option )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==WS) ) {
                    int LA2_1 = input.LA(2);

                    if ( (LA2_1==TEXT||LA2_1==7) ) {
                        alt2=1;
                    }


                }
                else if ( (LA2_0==TEXT||LA2_0==7) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:5: ( WS )? option
            	    {
            	    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:5: ( WS )?
            	    int alt1=2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0==WS) ) {
            	        alt1=1;
            	    }
            	    switch (alt1) {
            	        case 1 :
            	            // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:5: WS
            	            {
            	            WS1=(Token)match(input,WS,FOLLOW_WS_in_vmOptions75);  
            	            stream_WS.add(WS1);


            	            }
            	            break;

            	    }

            	    pushFollow(FOLLOW_option_in_vmOptions77);
            	    option2=option();

            	    state._fsp--;

            	    stream_option.add(option2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:16: ( WS )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==WS) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:16: WS
                    {
                    WS3=(Token)match(input,WS,FOLLOW_WS_in_vmOptions80);  
                    stream_WS.add(WS3);


                    }
                    break;

            }



            // AST REWRITE
            // elements: option
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 250:20: -> ( option )*
            {
                // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:250:23: ( option )*
                while ( stream_option.hasNext() ) {
                    adaptor.addChild(root_0, stream_option.nextTree());

                }
                stream_option.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "vmOptions"

    public static class option_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "option"
    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:252:1: option : ( '-' switchOption -> switchOption | nonSwitchOption -> nonSwitchOption );
    public final CommandLineParser.option_return option() throws RecognitionException {
        CommandLineParser.option_return retval = new CommandLineParser.option_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal4=null;
        CommandLineParser.switchOption_return switchOption5 = null;

        CommandLineParser.nonSwitchOption_return nonSwitchOption6 = null;


        CommonTree char_literal4_tree=null;
        RewriteRuleTokenStream stream_7=new RewriteRuleTokenStream(adaptor,"token 7");
        RewriteRuleSubtreeStream stream_switchOption=new RewriteRuleSubtreeStream(adaptor,"rule switchOption");
        RewriteRuleSubtreeStream stream_nonSwitchOption=new RewriteRuleSubtreeStream(adaptor,"rule nonSwitchOption");
        try {
            // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:252:8: ( '-' switchOption -> switchOption | nonSwitchOption -> nonSwitchOption )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==7) ) {
                alt4=1;
            }
            else if ( (LA4_0==TEXT) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:252:10: '-' switchOption
                    {
                    char_literal4=(Token)match(input,7,FOLLOW_7_in_option95);  
                    stream_7.add(char_literal4);

                    pushFollow(FOLLOW_switchOption_in_option97);
                    switchOption5=switchOption();

                    state._fsp--;

                    stream_switchOption.add(switchOption5.getTree());


                    // AST REWRITE
                    // elements: switchOption
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 252:27: -> switchOption
                    {
                        adaptor.addChild(root_0, stream_switchOption.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:253:3: nonSwitchOption
                    {
                    pushFollow(FOLLOW_nonSwitchOption_in_option107);
                    nonSwitchOption6=nonSwitchOption();

                    state._fsp--;

                    stream_nonSwitchOption.add(nonSwitchOption6.getTree());


                    // AST REWRITE
                    // elements: nonSwitchOption
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 253:20: -> nonSwitchOption
                    {
                        adaptor.addChild(root_0, stream_nonSwitchOption.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "option"

    public static class switchOption_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "switchOption"
    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:255:1: switchOption : ({...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT '=' eText -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT WS eText -> | t= TEXT ->);
    public final CommandLineParser.switchOption_return switchOption() throws RecognitionException {
        CommandLineParser.switchOption_return retval = new CommandLineParser.switchOption_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token t=null;
        Token char_literal7=null;
        Token WS9=null;
        CommandLineParser.eText_return eText8 = null;

        CommandLineParser.eText_return eText10 = null;


        CommonTree t_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree WS9_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_TEXT=new RewriteRuleTokenStream(adaptor,"token TEXT");
        RewriteRuleTokenStream stream_8=new RewriteRuleTokenStream(adaptor,"token 8");
        RewriteRuleSubtreeStream stream_eText=new RewriteRuleSubtreeStream(adaptor,"rule eText");

        	int index = 0;
        	String name = null;
        	String value = null;

        try {
            // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:261:2: ({...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT '=' eText -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT -> | {...}? =>t= TEXT WS eText -> | t= TEXT ->)
            int alt5=10;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // /Users/tom/Projects/netbeans/jet-main/java.j2seproject/src/org/netbeans/modules/java/j2seproject/ui/customizer/vmo/gen/CommandLine.g:261:4: {...}? =>t= TEXT
                    {
                    if ( !((switchOptions.contains(input.LT(1).getText()))) ) {
                        throw new FailedPredicateException(input, "switchOption", "switchOptions.contains(input.LT(1).getText())");
                    }
                    t=(Token)match(input,TEXT,FOLLOW_TEXT_in_switchOption135);  
                    stream_TEXT.add(t);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 261:78: ->
                    {
                        adaptor.addChild(root_0, new SwitchNode(t));

                    }
